Basic dungeon and player movement

--- a/index.html
+++ b/index.html
@@ -2,8 +2,32 @@
 <html>
   <head>
     <title>Underground - 7DRL</title>
+    <style>
+      body,
+      html {
+        margin: 0;
+        height: 100%;
+      }
+
+      body {
+        font-family: monospace;
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+        align-content: center;
+        justify-content: center;
+        background-color: #222;
+      }
+
+      h1 {
+        color: #fff;
+        text-align: center;
+        font-weight: normal;
+      }
+    </style>
   </head>
   <body>
+    <h1>Underground</h1>
     <script src="build/underground.js"></script>
   </body>
 </html>
