--- a/index.html
+++ b/index.html
@@ -13,16 +13,38 @@
         font-family: monospace;
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: auto auto;
+        grid-template-rows: auto auto auto;
         align-content: center;
         justify-content: center;
         background-color: #222;
+        grid-gap: 12px;
       }
 
       h1 {
         color: #fff;
         text-align: center;
         font-weight: normal;
+      }
+
+      .quest-log {
+        background-color: #000;
+        display: grid;
+        grid-template-columns: auto;
+        grid-template-rows: repeat(5, 1.5em);
+        justify-content: top;
+        padding: 2px 6px;
+      }
+
+      .log-item.info {
+        color: #aaf;
+      }
+
+      .log-item.danger {
+        color: #faa;
+      }
+
+      .log-item.success {
+        color: #0f4;
       }
     </style>
   </head>
