Basic camera and larger world

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         font-weight: normal;
       }
 
+      .container {
+        grid-area: 2 / 1;
+      }
+
       .quest-log {
         background-color: #000;
         display: grid;
