--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>Underground - 7DRL</title>
     <style>
+      @font-face {
+        font-family: 'Mister Pixel Regular';
+        src: url('assets/fonts/Mister Pixel Regular.woff2') format('woff2');
+      }
+
       body,
       html {
         margin: 0;
@@ -10,50 +15,18 @@
       }
 
       body {
-        font-family: monospace;
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: auto auto auto;
+        font-family: 'Mister Pixel Regular';
+        background-color: #222;
+        display: flex;
+        flex-direction: column;
         align-content: center;
         justify-content: center;
-        background-color: #222;
-        grid-gap: 12px;
-      }
-
-      h1 {
         color: #fff;
-        text-align: center;
-        font-weight: normal;
-      }
-
-      .container {
-        grid-area: 2 / 1;
-      }
-
-      .quest-log {
-        background-color: #000;
-        display: grid;
-        grid-template-columns: auto;
-        grid-template-rows: repeat(5, 1.5em);
-        justify-content: top;
-        padding: 2px 6px;
-      }
-
-      .log-item.info {
-        color: #aaf;
-      }
-
-      .log-item.danger {
-        color: #faa;
-      }
-
-      .log-item.success {
-        color: #0f4;
       }
     </style>
   </head>
   <body>
-    <h1>Underground</h1>
     <script src="build/underground.js"></script>
+    <ui-game></ui-game>
   </body>
 </html>
